ADI spacing fix

--- a/src/components/test-slot/additional-candidate-details/additional-candidate-details.scss
+++ b/src/components/test-slot/additional-candidate-details/additional-candidate-details.scss
@@ -1,5 +1,5 @@
 .additional-candidate-details {
-  margin-left: 10px;
+  //margin-left: 10px;
   color: var(--gds-black);
 
   &__list {
